# SimpleRPC

./: .gitignore  README.md  project.toml  pyproject.toml
SimpleRPC/: __init__.py  exceptions.py
examples/: client.py  client_v2.py  server.py  server_v2.py
examples/v1/: client.py  proto.proto  server.py
examples/v2/: client_v2.py  server_v2.py
examples/v2/simplerpc_client_tmp/: proto.proto
examples/v2/simplerpc_server_tmp/: Server.proto
simple_rpc/: __init__.py  grpc_client_reduced.py  grpc_server_reduced.py
simple_rpc/client/: grpc_client_auto.py
simple_rpc/server/: grpc_server_auto.py
simple_rpc/server/proto_builder/templates/: proto_template.proto
simple_rpc/v1/: grpc_client_reduced.py  grpc_server_reduced.py
simple_rpc/v2/client/: __init__.py  grpc_client_auto.py
simple_rpc/v2/client/SOT/: build.sh  sot.proto  sot_pb2.py  sot_pb2.pyi  sot_pb2_grpc.py  source_of_truth_client.py
simple_rpc/v2/client/SOT/proto/: sot_pb2.py  sot_pb2.pyi  sot_pb2_grpc.py
simple_rpc/v2/server/: __init__.py  grpc_server_auto.py
simple_rpc/v2/server/SOT/: sot.proto  source_of_truth_server.py
simple_rpc/v2/server/proto/: mappers.py  models.py  proto_builder.py
simple_rpc/v2/server/proto/templates/: proto_template.proto
simple_rpc/v2/server/proto_builder/templates/: proto_template.proto
